--- a/_config.yml
+++ b/_config.yml
@@ -24,18 +24,18 @@ projects:
   limit: 9
   exclude:
     archived: false
-    forks: true
+    forks: false
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-  # linkedin: your_username
+  linkedin: frej-larssen-5a118a234
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
