--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ projects:
     archived: false
     forks: false
     projects:
-    # - repo-name
+     - frejlarssen.github.io
+     - BosseBildoktorn.github.io
+     - yaffect-android
 
 social_media:
   # behance: your_username
