--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ projects:
      - frejlarssen.github.io
      - BosseBildoktorn.github.io
      - yaffect-android
+     - The-game
 
 social_media:
   # behance: your_username
